I fixed about so it doesn't collapse when we minimize the length of webpage.

--- a/css/design.css
+++ b/css/design.css
@@ -235,7 +235,7 @@ a {
 
 .scrolling-footer {
     position: relative;
-    min-height: 20%;
+    height: 25%;
     z-index: 2;
 }
 
@@ -246,7 +246,7 @@ a {
     font-family: 'Oxygen', sans-serif;
     font-weight: 300;
     font-size: 20px;
-    padding: 4%;
+    padding: 2.5%;
 }
 
 .footer-color p {
@@ -385,11 +385,16 @@ a {
 .officer-boxes {
 	width:600px;
 	height:400px;
-	border: 3px solid black;
-	margin-left:3.5%;
-	margin-top:5%;
+	margin-left:27px;
+	margin-top:50px;
 	float:left;
+	border: 5px solid black;
 }
+
+.officer-boxes:hover {
+	border: 5px solid #1F3A93;
+}
+
 
 .officer-image {
 	width:225px;
@@ -404,7 +409,7 @@ a {
 }
 
 .officer-info {
-	width:394px;
+	width:390px;
 	height:225px;
 	text-align:center;
 	margin-left:200px;
@@ -414,12 +419,27 @@ a {
 }
 
 .officer-bio-box {
-	width:594px;
-	height:169px;
+	width:590px;
+	height:165px;
 	text-align:justify;
-	padding-top:10px;
+	padding-top:7px;
 	line-height:30px;
 	padding-left:15px;
 	padding-right:15px;
 	background-color:#B2E0FF;
+}
+
+.below-bio-boxes {
+	margin-top:2320px;
+}
+
+#officer-team {
+	text-align:center;
+	padding-top:30px;
+	font-size:400%;
+}
+
+.fixed-width {
+	width:1300px;
+	margin:0 auto;
 }
